<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back" />

        <!-- Event Poster Section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Poster" />

        <ImageView
            android:id="@+id/eventPosterImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="Event Poster" />

        <Button
            android:id="@+id/uploadPosterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Poster"
            android:layout_gravity="center"/>

        <!-- Event Details Section with Background -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corners_grey"
            android:padding="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp">

            <EditText
                android:id="@+id/eventNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Name" />

            <EditText
                android:id="@+id/eventDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Event Description" />


            <EditText
                android:id="@+id/waitingListCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:inputType="number"
                android:hint="Waiting List Count (leave blank if no limit)" />

            <EditText
                android:id="@+id/lotteryCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Lottery Count" />

            <!-- Select Event Time -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventTimeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Select Event Time"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/selectedEventTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Select Registration Deadline -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registrationDeadlineTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Registration Deadline"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/selectedRegistrationDeadlineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="end"
                android:padding="8dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Select Lottery Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lotteryTimeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Select Lottery Time"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/selectedLotteryTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="end"
                android:padding="8dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Switch
            android:id="@+id/locationRequirementSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Require Location Access"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <!-- Create Event Button outside the grey background -->
    <Button
        android:id="@+id/createEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Event" />
</LinearLayout>
    </ScrollView>
