...
    android:padding="8dp"
    android:background="@drawable/rounded_corners_grey"
    android:layout_marginBottom="4dp">

    <!-- Facility Name TextView -->
    <TextView
        android:id="@+id/facilityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="Facility Name" />
...
            android:layout_height="wrap_content"
            android:text="View Events"
            android:layout_weight="1"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:layout_weight="1"
            android:textSize="14sp"
            android:layout_marginStart="4dp" />
...
